--- a/roles/ex-lb/defaults/main.yml
+++ b/roles/ex-lb/defaults/main.yml
@@ -1,6 +1,6 @@
 # 区分多个instance的VRRP组播，同网段不能重复，取值在0-255之间
 # 因项目已设置vrrp报文单播模式，所以这个ROUTER_ID 即便同网段里面有重复也没关系
-ROUTER_ID: 222 
+ROUTER_ID: 222
 
 # haproxy负载均衡算法，常见如下：
 # "roundrobin": 基于服务器权重的轮询
@@ -15,4 +15,4 @@ INGRESS_NODEPORT_LB: "no"
 INGRESS_TLS_NODEPORT_LB: "no"
 
 # 离线安装 haproxy+keepalived (offline|online)
-INSTALL_SOURCE: "online"
+INSTALL_SOURCE: "offline"
